--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 const powtorzenia = 7;
 const czasEtapu = 7; // sekundy
 const etapy = [
-  "Wdech nosem",
+  "Bierz głęboki wdech nosem",
   "Zatrzymaj powietrze",
-  "Wydech ustami",
-  "Przerwa przed następnym wdechem"
+  "Powoli wydychaj ustami",
+  "Policz do 7 przed wzięciem następnego wdechu"
 ];
 
 const etapDiv = document.getElementById("etap");
@@ -97,3 +97,4 @@ startBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
