--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ const etapy = [
   "Bierz głęboki wdech nosem",
   "Zatrzymaj powietrze",
   "Powoli wydychaj ustami",
-  "Policz do 7 przed wzięciem następnego wdechu"
+  "Nie oddychaj - Policz do 7 przed wzięciem następnego wdechu"
 ];
 
 const etapDiv = document.getElementById("etap");
@@ -97,4 +97,5 @@ startBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
